Remove unused imports and reformat code for SonarQube compliance
- Removed unused imports from test files
- Reformatted imports to follow project style standards
- Fixes MINOR severity SonarQube issues (unused imports)
- Improves code quality and readability

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>